--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
     <section class="section ow" id="home">
         <div class="container container-center">
             <h1>Technologies ,I work with </h1>
-            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
+            <div class="tech-holder">
+                <img src="./assets/tech/html5.svg" alt="html5" class="tech-icon" />
+                <img src="./assets/tech/css3.svg" alt="html5" class="tech-icon" />
+                <img src="./assets/tech/javascript-1.svg" alt="html5" class="tech-icon" />
+            </div>
+            <div class="tech-holder">
+                <img src="./assets/tech/nodejs-2.svg" alt="html5" class="tech-icon" />
+                <img src="./assets/tech/mongodb.svg" alt="html5" class="tech-icon" />
+                <img src="./assets/tech/deno-1.svg" alt="html5" class="tech-icon" />
+            </div>
+            <div class="tech-holder">
+                <img src="./assets/tech/react.svg" alt="html5" class="tech-icon" />
+                <img src="./assets/tech/github-icon-1.svg" alt="html5" class="tech-icon" />
+                <img src="./assets/tech/vue-9.svg" alt="html5" class="tech-icon" />
+            </div>
         </div>
     </section>
 
