add blogs/project page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <a class="link link-active" href="#home">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/projects.html">Projects</a>
+                <a class="link" href="/pages/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>
+                <a class="link" href="/pages/blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -59,39 +59,42 @@
 
     <section class="section">
         <div class="container container-center">
-            <h1>projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
-            <a class="link link-primary" href="/projects.html">See Projects</a>
+            <h1>Projects</h1>
+            <p>There's saying in coding industry that 'Talk is cheap , Show me the code' <br /> thus i'm more than
+                excited to show you my projects</p>
+            <a class="link link-primary" href="/pages/projects.html">Go to Projects</a>
         </div>
     </section>
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+            <h1>Blogs</h1>
+            <p>Blogs are good resources for developers. They make it easy to learn the coding concepts with every
+                developer's
+                individual taste & experience
             </p>
-            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
+            <a class="link link-secondary" href="/pages/blogs.html">Read Blogs</a>
         </div>
     </section>
     <footer class="footer">
         <ul class="list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/whoadarshpandya">
+                <a class="link" target="_blank" href="https://github.com/whoadarshpandya">
                     <i class="fab fa-github fa-2x"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/codarsh">
+                <a class="link" target="_blank" href="https://twitter.com/codarsh">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://in.linkedin.com/in/adarsh-pandya-73963a15b">
+                <a class="link" target="_blank" href="https://in.linkedin.com/in/adarsh-pandya-73963a15b">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://instagram.com/why_adarsh">
+                <a class="link" target="_blank" href="https://instagram.com/why_adarsh">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
             </li>
