--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,11 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adarsh's Projects</title>
+    <!-- load font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
+    <!-- font awesome script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
+        integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ=="
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <script src="../main.js"></script>
+    <nav class="navigation container">
+        <div class="nav-brand"><a href="/">Adarsh Pandya </a></div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/pages/projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link " href="/pages/blogs.html">Blogs</a>
+            </li>
+        </ul>
+    </nav>
+    <header class="hero">
+        <h1 class="hero-heading">see my <span class="heading-inverted"> code</span></h1>
+    </header>
+    <ul class="list-non-bullet" id="myprojects">
+
+
+    </ul>
+    <footer class="footer">
+        <ul class="list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://github.com/whoadarshpandya">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://twitter.com/codarsh">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://in.linkedin.com/in/adarsh-pandya-73963a15b">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" target="_blank" href="https://instagram.com/why_adarsh">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+    <script src="../project.js"></script>
 
 </body>
 
