--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </ul>
     </nav>
     <header class="hero">
-        <img class="hero-img" src="./assets/blogging.png" />
+        <div class="hero-container">
+            <img class="hero-img" src="./assets/blogging.png" />
+        </div>
         <h1 class="hero-heading">Hey i'm Adarsh and i'm<span class="heading-inverted"> full stack developer</span></h1>
     </header>
     <section class="section ow" id="home">
